--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,10 +1,205 @@
 <app-layout>
-    <div class="main">
-        <section class="banner d-grid align-items-center">
-            <div class="banner-content">
-                <h1 class="display-4 text-center text-white">Welcome to Vanavihari Resorts</h1>
-                <h3 class="text-center text-white">A Community Based Eco-Tourism, Maredumilli</h3>
+  <div class="main">
+    <section class="banner d-grid align-items-center">
+      <div class="banner-content">
+        <h1 class="display-4 text-center text-white">
+          Welcome to Vanavihari Resorts
+        </h1>
+        <h3 class="text-center text-white">
+          A Community Based Eco-Tourism, Maredumilli
+        </h3>
+      </div>
+    </section>
+    <section class="intro py-5">
+      <div class="container">
+        <p class="text-center border border-1 mb-0">
+          Vanavihari resort, nestled in Maredumilli, is a haven for eco-tourism
+          enthusiasts. This community-centric guesthouse offers a peaceful
+          escape surrounded by nature. Providing cozy cottages and rooms, it
+          sits within easy reach of Maredumilli Waterfalls, ensuring guests
+          enjoy a tranquil environment. Delight in breakfast and dinner
+          offerings, along with a relaxing stay at this charming retreat.
+        </p>
+      </div>
+    </section>
+    <section class="search-rooms py-5">
+      <div class="container">
+        <h2 class="text-center mb-4">Book your preferred Resort</h2>
+        <form>
+          <div class="row align-items-center gap-2 gap-lg-0">
+            <div class="col-md-3">
+              <label for="resort" class="form-label">Select Resort</label>
+              <select class="form-select" id="resort">
+                <option value="Vanavihari">Vanavihari, Maredumilli</option>
+                <option value="JunglStar">Jungle Star, Valamuru</option>
+                <option value="Vanyavihari">
+                  Vanyavihari, Rampachodavaram
+                </option>
+              </select>
             </div>
+            <div class="col-md-3">
+              <label for="dateRange" class="form-label"
+                >Check-in & Check-out date</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="dateRange"
+                placeholder="Select dates"
+              />
+            </div>
+            <div class="col-md-3">
+              <label for="guestsRooms" class="form-label"
+                >Guests and Rooms</label
+              >
+              <div class="input-group">
+                <label
+                  type="text"
+                  class="form-control guests-rooms-label"
+                  for="guestsRoomsDropdown"
+                  aria-describedby="guestsRoomsDropdown"
+                  readonly
+                  >&nbsp;</label
+                >
+                <input type="hidden" id="guestsGuests" />
+                <input type="hidden" id="guestsRooms" />
+                <div class="input-group-append">
+                  <button
+                    type="button"
+                    class="btn btn-outline-secondary dropdown-toggle"
+                    style="height: 100%"
+                    id="guestsRoomsDropdown"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Select
+                  </button>
+                  <div
+                    class="dropdown-menu"
+                    aria-labelledby="guestsRoomsDropdown"
+                  >
+                    <div class="dropdown-item">
+                      <input
+                        type="number"
+                        class="form-control"
+                        id="guests"
+                        placeholder="Guests"
+                      />
+                    </div>
+                    <div class="dropdown-item">
+                      <input
+                        type="number"
+                        class="form-control"
+                        id="rooms"
+                        placeholder="Rooms"
+                      />
+                    </div>
+                    <div class="dropdown-item">
+                      <button
+                        type="button"
+                        class="btn btn-secondary"
+                        id="confirmGuestsRooms"
+                      >
+                        Confirm
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3 align-self-end">
+              <button type="submit" class="btn btn-primary">Search</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </section>
+    <div class="container mt-5">
+      <div class="row">
+        <!-- Left Column - Displaying Paragraph -->
+        <div class="col-md-6">
+          <h3>Vanavihari</h3>
+          <img
+            class="image-fluid mb-3"
+            style="height: 200px; width: 300px"
+            src="assets/img/OUTER.jpg"
+          />
+          <p>
+            Vanavihari resort, nestled in Maredumilli, is a haven for
+            eco-tourism enthusiasts. This community-centric guesthouse offers a
+            peaceful escape surrounded by nature. Providing cozy cottages and
+            rooms, it sits within easy reach of Maredumilli Waterfalls, ensuring
+            guests enjoy a tranquil environment. Delight in breakfast and dinner
+            offerings, along with a relaxing stay at this charming retreat.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2096.9750517228763!2d81.70766415859167!3d17.600715928141202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a373b5d52758873%3A0x718f2b2059db5e0a!2sVanavihari%20Maredumilli!5e0!3m2!1sen!2sin!4v1706798767875!5m2!1sen!2sin"
+              width="100%"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            >
+            </iframe>
+          </div>
+        </div>
+        <section class="container py-5">
+          <div class="container">
+            <h2 class="text-center mb-5">VANAVIHARI, Maredumilli</h2>
+            <p class="mb-5">
+              Vanavihari resort in Maredumilli is an eco-tourism haven. The
+              community-centric guesthouse offers cozy cottages and rooms,
+              surrounded by nature and near Maredumilli Waterfalls. Guests enjoy
+              peaceful escapes with breakfast and dinner included.
+            </p>
+            <div class="row justify-content-between gap-3">
+              <div class="col-md-3">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#modalR1"
+                  src="assets/img/Vanavihari-1.jpg"
+                  alt="Vanavihari Resort Photo"
+                  class="img-fluid rounded mb-3"
+                />
+              </div>
+              <div class="col-md-3">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2096.9750517228763!2d81.70766415859167!3d17.600715928141202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a373b5d52758873%3A0x718f2b2059db5e0a!2sVanavihari%20Maredumilli!5e0!3m2!1sen!2sin!4v1706798767875!5m2!1sen!2sin"
+                  width="100%"
+                  height="300"
+                  frameborder="0"
+                  style="border: 0"
+                  allowfullscreen=""
+                  aria-hidden="false"
+                  tabindex="0"
+                ></iframe>
+              </div>
+              <div class="col-md-3">
+                <h3>Maredumilli Waterfalls</h3>
+                <img
+                  src="assets/img/MAREDUMILLI-waterfalls.jpg"
+                  alt="Maredumilli Waterfalls Photo"
+                  class="img-fluid rounded mb-3"
+                />
+                <!-- <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15212.370538782081!2d81.7135475!3d17.5983355!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a373b6778f7243b%3A0xe93daabd3f7d567d!2sMaredumilli%20Water%20Falls!5e0!3m2!1sen!2sin!4v1707058999843!5m2!1sen!2sin"
+                            width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""
+                            aria-hidden="false" tabindex="0"></iframe> -->
+                <p>
+                  A scenic waterfall surrounded by lush greenery. It is a
+                  popular spot for swimming and picnicking.
+                </p>
+              </div>
+            </div>
+          </div>
         </section>
+      </div>
     </div>
+  </div>
 </app-layout>
+
+<app-footer></app-footer>
