sign-in and up- routes not cleared

--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -41,7 +41,7 @@
               </form>
               <div class="d-flex">
                 <a >Reset Password</a>
-                <a (click)="">New User? Sign Up</a>
+                <a (click)="goToSignup()">New User? Sign Up</a>
               </div>
             </div>
           </div>
