--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -3,7 +3,7 @@
         <div class="card border-0">
             <div class="card-body p-4 p-sm-5">
               <div class="card-title text-center">
-                <p class="card-title fs-5">Sign into your</p>
+                <p class="card-title fs-5">Create your</p>
                 <h5 class="mb-4">Vanavihari user account</h5>
               </div>
               <form>
@@ -11,13 +11,23 @@
                   <mat-label>Mobile no.</mat-label>
                   <input type="tel" matInput required placeholder="Enter 10 digit mobile no.">
                 </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>Email</mat-label>
+                    <input type="email" matInput required placeholder="abc@gmail.com">
+                  </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Password</mat-label>
                   <input type="password" matInput placeholder="Enter Password">
                   <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
                   <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
                 </mat-form-field>
-                <mat-checkbox value="" color="primary" class="my-2">Remember password</mat-checkbox>
+                <mat-form-field appearance="outline" class="mt-3">
+                    <mat-label>Repeat Password</mat-label>
+                    <input type="password" matInput placeholder="Repeat Password">
+                    <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
+                    <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
+                  </mat-form-field>
+                <mat-checkbox value="" color="primary" class="my-2">I agree to the terms and conditions</mat-checkbox>
                 <!-- <div class="d-flex align-items-center">
                         <span class="lgcaptcha-area" id="captcha"></span>
                         <a href="javascript:;" (click)="createCaptcha()" class="lgcaptcha-refresh" aria-label="refresh captcha">
@@ -35,13 +45,13 @@
                       <div *ngIf="validCaptchaError && !captchaError">{{'Please enter Valid captcha' | languageTranslatorImpure}}
                       </div> -->
                 <!-- </div> -->
-                <button mat-raised-button color="primary" (click)="goToSignin()" class="w-100 mt-1">Sign In</button>
+                <button mat-raised-button color="primary" (click)="goToSignup()" class="w-100 mt-1">Sign Up</button>
       
                 <!-- <a (click)="register()">Register here</a> -->
               </form>
               <div class="d-flex">
-                <a >Reset Password</a>
-                <a (click)="">New User? Sign Up</a>
+                <a >Reset fields</a>
+                <a (click)="goToSignin()">Already have an account? Sign In</a>
               </div>
             </div>
           </div>
