about to terms and cond- components created

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -3,7 +3,7 @@
     <section class="banner d-grid align-items-center">
       <div class="banner-content">
         <h1 class="display-4 text-center text-white">
-          Welcome to Vanavihari Resorts
+          Welcome to Vanavihari
         </h1>
         <h3 class="text-center text-white">
           A Community Based Eco-Tourism, Maredumilli
@@ -13,7 +13,7 @@
     <section class="intro py-5">
       <div class="container">
         <p class="text-center border border-1 mb-0">
-          Vanavihari resort, nestled in Maredumilli, is a haven for eco-tourism
+          Vanavihari, nestled in Maredumilli, is a haven for eco-tourism
           enthusiasts. This community-centric guesthouse offers a peaceful
           escape surrounded by nature. Providing cozy cottages and rooms, it
           sits within easy reach of Maredumilli Waterfalls, ensuring guests
