--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -38,7 +38,7 @@
                 aria-haspopup="true" aria-expanded="false">Our Resorts</a>
               <div class="dropdown-menu" aria-labelledby="dropdownId">
                 <a class="dropdown-item" href="#">Vanavihari, Maredumilli</a>
-                <a class="dropdown-item" href="#">JunglStar, Valamuru</a>
+                <a class="dropdown-item" href="#">Jungl Star Eco Camp, Valamuru</a>
                 <a class="dropdown-item" href="#">Vanyavihari, Rampachodavaram</a>
               </div>
             </li>
