--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -1,77 +1,59 @@
 <header>
   <!-- topbar -->
-  <div class="topbar py-2 bg-dark navbar-top d-none d-lg-block">
-    <div class="container d-flex justify-content-between">
-      <!-- nav-items left -->
-      <div class="nav-x d-lg-flex gap-2 align-items-center">
-        <a class="text-decoration-none text-light" (click)="goToHome()">Home</a>
-      </div>
-      <!-- nav-items right -->
-      <div class="nav-x d-lg-flex gap-3 align-items-center">
-        <a class="text-decoration-none text-light" href="mailto:cbet_maredumilli@yahoo.com"
-          title="click to send email">cbet_maredumilli@yahoo.com</a>
-        <a class="text-decoration-none text-light" href="tel:+919494151617" title="call">9494151617</a>
-        <a class="text-decoration-none text-light" (click)="goToSignin()">Sign In</a>
-      </div>
-    </div>
-  </div>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
-        data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-        aria-label="Toggle navigation">
+  <nav class="navbar navbar-expand navbar-light bg-dark">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId"
+        aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand me-0 d-lg-none" href="#">
+      <a class="navbar-brand" href="#">
         <img src="assets/img/vanavihari_logo.png" alt="vanavihari_logo" class="d-inline-block align-top img-fluid" />
       </a>
-  <div class="collapse navbar-collapse" id="collapsibleNavId">
-        <ul class="navbar-nav w-100 mt-2 mt-lg-0">
-          <!-- Your navigation items here -->
-          <li class="nav-item d-lg-none">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+      <!-- right menu -->
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">cbet_maredumilli@yahoo.com</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">9494151617</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Book Trip</a>
+        </li>
+        <li class="nav-item">
+          <a class="" (click)="goToSignin()">Sign In</a>
+        </li>
+      </ul>
+      <!-- collapse in all screens from left slide in -->
+      <div class="collapse navbar-collapse" id="collapsibleNavId">
+        <ul class="navbar-nav w-100">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">Resorts Accomodation</a>
+            <div class="dropdown-menu" aria-labelledby="dropdownId">
+              <a class="dropdown-item" href="#">Vanavihari, Maredumilli</a>
+              <a class="dropdown-item" href="#">Jungl Star Eco Camp, Valamuru</a>
+              <a class="dropdown-item" href="#">Vanyavihari, Rampachodavaram</a>
+            </div>
           </li>
-          <!-- ... other menu items ... -->
-          <div class="d-lg-flex nav-x">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">Our Resorts</a>
-              <div class="dropdown-menu" aria-labelledby="dropdownId">
-                <a class="dropdown-item" href="#">Vanavihari, Maredumilli</a>
-                <a class="dropdown-item" href="#">Jungl Star Eco Camp, Valamuru</a>
-                <a class="dropdown-item" href="#">Vanyavihari, Rampachodavaram</a>
-              </div>
-            </li>
-            <!-- <li class="nav-item">
-                            <a class="nav-link" href="#">Resorts</a>
-                        </li> -->
-            <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Tourist Destinations</a>
-            </li>
-          </div>
-          <a class="navbar-brand mx-auto d-none d-lg-block" href="#">
-            <img src="assets/img/vanavihari_logo.png" alt="vanavihari_logo"
-              class="d-inline-block align-top img-fluid" />
-          </a>
-          <!-- Add horizontal divider after "Tourist Destinations" -->
+          <li class="nav-item">
+            <a class="nav-link" href="#">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Tourist Destinations</a>
+          </li>
           <li class="nav-item">
             <hr class="dropdown-divider" />
           </li>
-          <div class="d-lg-flex nav-x">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Tribal Community</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Gallery</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
-            </li>
-          </div>
-          <!-- Add horizontal divider after "Contact Us" -->
+          <li class="nav-item">
+            <a class="nav-link" href="#">Tribal Community</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact Us</a>
+          </li>
           <li class="nav-item">
             <hr class="dropdown-divider" />
           </li>
@@ -88,6 +70,8 @@
       </div>
     </div>
   </nav>
+  
+
 </header>
 <!-- End Header -->
 <main>
@@ -96,51 +80,51 @@
 
 <footer class="bg-dark text-white py-4">
   <div class="container">
-      <div class="row">
-          <div class="col-md-4">
-              <h3>Links</h3><br>
-              <ul class="list-unstyled">
-                  <li><a class="text-decoration-none text-white" href="#">About us</a></li>
-                  <li><a class="text-decoration-none text-white" href="#">Awards and News</a></li>
-                  <li><a class="text-decoration-none text-white" href="#">Privacy Policy</a></li>
-                  <li><a class="text-decoration-none text-white" href="#">Terms and Conditions</a></li>
-              </ul>
-          </div>
-          <div class="col-md-4">
-              <h3>Contact Info</h3>
-              <address>Co-ordinator(Complex Manager),<br>
-                  Community Based Eco-Tourism, <br>
-                  Maredumilli.
-              </address>
-              <ul class="list-unstyled">
-                  <li> <i class="fa fa-phone" aria-hidden="true"></i>&nbsp;
-                      <a class="text-decoration-none text-light" href="mailto:cbet_maredumilli@yahoo.com"
-                          title="click to send email">cbet_maredumilli@yahoo.com</a>
-                  </li>
-                  <li>
-                      <!-- font awesome email -->
-                      <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;
-                      <a class="text-decoration-none text-light" href="tel:+919494151617" title="call">9494151617</a>
-                  </li>
-              </ul>
-
-
-          </div>
-          <div class="col-md-4">
-              <h3>Send a message</h3>
-              <form class="contact-form">
-                  <div class="mb-2">
-                      <input type="text" class="form-control" placeholder="Your Name">
-                  </div>
-                  <div class="mb-2">
-                      <input type="email" class="form-control" placeholder="Your Email">
-                  </div>
-                  <div class="mb-2">
-                      <textarea class="form-control" placeholder="Your Message"></textarea>
-                  </div>
-                  <button type="submit" class="btn btn-light">Send Message</button>
-              </form>
-          </div>
+    <div class="row">
+      <div class="col-md-4">
+        <h3>Links</h3><br>
+        <ul class="list-unstyled">
+          <li><a class="text-decoration-none text-white" href="#">About us</a></li>
+          <li><a class="text-decoration-none text-white" href="#">Awards and News</a></li>
+          <li><a class="text-decoration-none text-white" href="#">Privacy Policy</a></li>
+          <li><a class="text-decoration-none text-white" href="#">Terms and Conditions</a></li>
+        </ul>
       </div>
+      <div class="col-md-4">
+        <h3>Contact Info</h3>
+        <address>Co-ordinator(Complex Manager),<br>
+          Community Based Eco-Tourism, <br>
+          Maredumilli.
+        </address>
+        <ul class="list-unstyled">
+          <li> <i class="fa fa-phone" aria-hidden="true"></i>&nbsp;
+            <a class="text-decoration-none text-light" href="mailto:cbet_maredumilli@yahoo.com"
+              title="click to send email">cbet_maredumilli@yahoo.com</a>
+          </li>
+          <li>
+            <!-- font awesome email -->
+            <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;
+            <a class="text-decoration-none text-light" href="tel:+919494151617" title="call">9494151617</a>
+          </li>
+        </ul>
+
+
+      </div>
+      <div class="col-md-4">
+        <h3>Send a message</h3>
+        <form class="contact-form">
+          <div class="mb-2">
+            <input type="text" class="form-control" placeholder="Your Name">
+          </div>
+          <div class="mb-2">
+            <input type="email" class="form-control" placeholder="Your Email">
+          </div>
+          <div class="mb-2">
+            <textarea class="form-control" placeholder="Your Message"></textarea>
+          </div>
+          <button type="submit" class="btn btn-light">Send Message</button>
+        </form>
+      </div>
+    </div>
   </div>
 </footer>
