--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -72,6 +72,10 @@
             <div class="col-md-3 align-self-end">
               <button type="submit" class="btn btn-primary">Search</button>
             </div>
+            <div class="col-md-3 align-self-end">
+              <a href="javascript:void(0)" (click)="triggerURL()" class="btn btn-primary">Test API</a>
+            </div>
+            <p class="test-res">Test Content</p>
           </div>
         </form>
       </div>
