about pg layout

--- a/src/app/modules/about-vanavihari/about-vanavihari.component.html
+++ b/src/app/modules/about-vanavihari/about-vanavihari.component.html
@@ -1,1 +1,40 @@
-<p>about-vanavihari works!</p>
+<app-layout>
+    <div class="main">
+        <section class="about-banner d-grid place-content-center">
+            <h1 class="text-center">About Vanavihari</h1>
+        </section>
+        <section class="about-content">
+           <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <p>
+                        <!-- about us content -->
+                    </p>
+                </div>
+            </div>
+           </div>
+        </section>
+        <section class="tribal-community">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8">
+                        <h2>Tribal Community</h2>
+                        <!-- masonry gallery static 10 images-->
+                    </div>
+                    <div class="col-lg-4">
+                        <h2>
+                            <!-- Konda reddy tribals -->
+                        </h2>
+                        <p>
+                            <!-- 3 lines -->
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="our-approach">
+
+        </section>
+    </div>
+  </app-layout>
+  
