--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -37,7 +37,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" (click)="goToAboutUs()">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Tourist Destinations</a>
@@ -84,7 +84,7 @@
       <div class="col-md-4">
         <h3>Links</h3><br>
         <ul class="list-unstyled">
-          <li><a class="text-decoration-none text-white" href="#">About us</a></li>
+          <li><a class="text-decoration-none text-white" (click)="goToAboutUs()">About us</a></li>
           <li><a class="text-decoration-none text-white" href="#">Awards and News</a></li>
           <li><a class="text-decoration-none text-white" href="#">Privacy Policy</a></li>
           <li><a class="text-decoration-none text-white" href="#">Terms and Conditions</a></li>
