--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -75,7 +75,7 @@
             <!-- <div class="col-md-3 align-self-end">
               <a href="javascript:void(0)" (click)="triggerURL()" class="btn btn-primary">Test API</a>
             </div> -->
-            <p class="test-res">Test Content</p>
+            <!-- <p class="test-res">Test Content</p> -->
           </div>
         </form>
       </div>
