about page content

--- a/src/app/modules/about-vanavihari/about-vanavihari.component.html
+++ b/src/app/modules/about-vanavihari/about-vanavihari.component.html
@@ -9,6 +9,21 @@
                 <div class="col-lg-8 mx-auto">
                     <p>
                         <!-- about us content -->
+                        <br>
+                        Vana Vihari is an initiative of the Government of Andhra Pradesh through its Forest Department and is owned by the Andhra Pradesh Forest Department, maintained by CBET, Maredumilli. 
+                        Vana Vihari is initiated by the Andhra Pradesh Forest Department, by the forest policies of both the state and the union government of India. 
+                        Its purpose is to provide financial benefits and empowerment to local communities, promote responsible tourism to natural areas, and create a sustainable, equitable, community-based endeavour to improve the living standards of indigenous host communities.
+                         The goal is also to instil the essence of conservation of wild resources among the general public while offering the best possible experience to nature-loving tourists.<br><br>
+
+                        Thus, Community-Based Eco-Tourism under the name of Vana Vihari is formed to allow the general public to enjoy nature, with a plan to instil the essence of conservation of wild resources among them.
+                        Vana Vihari is the brand name of CBET Maredumilli. Essentially, CBET Maredumilli was formed by selecting some members from Somireddypalem VSS, who were then trained in the basics of the hospitality industry. 
+                        The CBET micro plan is approved by the Divisional Forest Officer, Kakinada, and sent to PCCF(Hoff) Andhra Pradesh for the sanction of funds.<br><br>
+
+                        A 15-member management committee is formed with 50% women representation.
+                        The accounts will be maintained by the management committee under a joint account opened in the name of the chairman of the management committee and the Forest Section Officer concerned, who is the Member Secretary of the committee.
+                        After attaining the sustainable stage or completion of 5 years of successful operation, 50% of the revenue realized should be kept in a joint account opened in the name of CBET and the Forest Department, to be utilized for the development of the ecosystem.
+                        The remaining 50% is to be kept in the CBET account and utilized as decided by the general body of the CBET.
+
                     </p>
                 </div>
             </div>
@@ -20,13 +35,54 @@
                     <div class="col-lg-8">
                         <h2>Tribal Community</h2>
                         <!-- masonry gallery static 10 images-->
+                        <div class="grid-wrapper">
+                            <div>
+                                <img src="/assets/img/tribal/1.jpg" alt="tribal image 1" />
+                            </div>
+                            <div>
+                                <img src="/assets/img/tribal/2.jpg" alt="tribal image 2" />
+                            </div>
+                            <div class="tall">
+                                <img src="/assets/img/tribal/3.jpg" alt="tribal image 3">
+                            </div>
+                            <div class="wide">
+                                <img src="/assets/img/tribal/4.jpg" alt="tribal image 4" />
+                            </div>
+                            <div class="wide">
+                                <img src="/assets/img/tribal/5.jpg" alt="tribal image 5" />
+                            </div>
+                            <div class="tall">
+                                <img src="/assets/img/tribal/6.jpg" alt="tribal image 6" />
+                            </div>
+                            <div class="big">
+                                <img src="/assets/img/tribal/7.jpg" alt="tribal image 7" />
+                            </div>
+                            <div class="tall">
+                                <img src="/assets/img/tribal/8.jpg" alt="tribal image 8" />
+                            </div>
+                            <div class="wide">
+                                <img src="/assets/img/tribal/10.jpg" alt="tribal image 9" />
+                            </div>
+                            
+                        </div>
                     </div>
                     <div class="col-lg-4">
                         <h2>
-                            <!-- Konda reddy tribals -->
+                            <!-- Konda reddy tribals -->Konda Reddi
                         </h2>
                         <p>
                             <!-- 3 lines -->
+                            Konda Reddis inhabit the banks on either side of the Godavari River in the hilly and forested regions of East and West Godavari, and Khammam districts of Andhra Pradesh. Their mother tongue is Telugu.
+
+                        </p>
+                        <h2>
+                            <!-- Valmiki tribals -->Valmiki
+                        </h2>
+                        <p>
+                            <!-- 3 lines -->
+                            Valmikis living in the Agency tracts of Andhra Pradesh are the only group recognized as Scheduled Tribes, primarily found in the agency areas of Visakhapatnam and East Godavari districts. Claiming descent from the sage Valmiki, the author of the Ramayana, the Valmiki tribe is divided into various 'gotrams' to regulate marriage institutions in Visakhapatnam tribal areas.
+
+
                         </p>
                     </div>
                 </div>
