--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -9,24 +9,24 @@
                 <p class="card-title fs-5">Create your</p>
                 <h5 class="mb-4">Vanavihari user account</h5>
               </div>
-              <form>
+              <form #myForm="ngForm" (ngSubmit)="onSubmit(myForm)">
                 <mat-form-field appearance="outline">
                   <mat-label>Mobile no.</mat-label>
-                  <input type="tel" matInput required placeholder="Enter 10 digit mobile no.">
+                  <input type="tel" matInput required name="mobile" ngModel placeholder="Enter 10 digit mobile no.">
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Email</mat-label>
-                  <input type="email" matInput required placeholder="abc@gmail.com">
+                  <input type="email" matInput required name="email" ngModel placeholder="abc@gmail.com">
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Password</mat-label>
-                  <input type="password" matInput placeholder="Enter Password">
+                  <input type="password" matInput name="password" ngModel placeholder="Enter Password">
                   <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
                   <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Repeat Password</mat-label>
-                  <input type="password" matInput placeholder="Repeat Password">
+                  <input type="password" matInput name="repeat_password" ngModel placeholder="Repeat Password">
                   <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
                   <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
                 </mat-form-field>
@@ -48,7 +48,7 @@
                       <div *ngIf="validCaptchaError && !captchaError">{{'Please enter Valid captcha' | languageTranslatorImpure}}
                       </div> -->
                 <!-- </div> -->
-                <button mat-raised-button color="primary" (click)="goToSignup()" class="w-100 mt-1">Sign Up</button>
+                <button mat-raised-button color="primary" class="w-100 mt-1">Sign Up</button>
 
                 <!-- <a (click)="register()">Register here</a> -->
               </form>
