--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -1,72 +1,35 @@
 <header>
-  <!-- topbar -->
- <nav
-  class="navbar navbar-expand-sm navbar-light bg-dark"
- >
-  <div class="container">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button
-      class="navbar-toggler d-lg-none"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#collapsibleNavId"
-      aria-controls="collapsibleNavId"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavId">
-      <ul class="navbar-nav me-auto mt-2 mt-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" href="#" aria-current="page"
-            >Home
-            <span class="visually-hidden">(current)</span></a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/sign-in" routerLinkActive="active" ariaCurrentWhenActive="page">Sign In</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="dropdownId"
-            data-bs-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
-            >Dropdown</a
-          >
-          <div
-            class="dropdown-menu"
-            aria-labelledby="dropdownId"
-          >
-            <a class="dropdown-item" href="#"
-              >Action 1</a
-            >
-            <a class="dropdown-item" href="#"
-              >Action 2</a
-            >
-          </div>
-        </li>
-      </ul>
-      <!-- <form class="d-flex my-2 my-lg-0">
-        <input
-          class="form-control me-sm-2"
-          type="text"
-          placeholder="Search"
-        />
-        <button
-          class="btn btn-outline-success my-2 my-sm-0"
-          type="submit"
-        >
-          Search
-        </button>
-      </form> -->
+  <nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" (click)="toggleSidebar()">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#">Logo</a>
+      <div class="collapse navbar-collapse justify-content-end">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Resort Accommodation</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Email</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Phone</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Sign In</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+  <div id="sidebar" [ngClass]="{ 'active': isSidebarOpen }">
+    <div class="overlay" [ngClass]="{ 'active': isSidebarOpen }" ></div>
+    <div class="sidebar-content">
+      <!-- Sidebar content goes here -->
     </div>
   </div>
- </nav>
- 
   
 
 </header>
