--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -4,23 +4,25 @@
       <button class="navbar-toggler" type="button" (click)="toggleSidebar()">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
-      <div class="collapse navbar-collapse justify-content-end">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Resort Accommodation</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Email</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Phone</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Sign In</a>
-          </li>
-        </ul>
-      </div>
+      <a class="navbar-brand" href="#">
+        <img src="assets/img/vanavihari_logo.png" alt="vanavihari_logo">
+      </a>
+      <ul class="navbar-nav d-none d-lg-block">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Resort Accommodation</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Email</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Phone</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/sign-in" routerLinkActive="active" ariaCurrentWhenActive="page">Sign In</a>
+        </li>
+      </ul>
+      <!-- <div class="collapse navbar-collapse justify-content-end">
+      </div> -->
     </div>
   </nav>
   
@@ -28,6 +30,11 @@
     <div class="overlay" [ngClass]="{ 'active': isSidebarOpen }" ></div>
     <div class="sidebar-content">
       <!-- Sidebar content goes here -->
+      <ul class="sidebar-menu list-unstyled">
+        <li class="sidebar-item">
+          <a class="sidebar-link" href="#">Menu Item 1</a>
+        </li>
+      </ul>
     </div>
   </div>
   
