--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -32,9 +32,35 @@
       <!-- Sidebar content goes here -->
       <ul class="sidebar-menu list-unstyled">
         <li class="sidebar-item">
-          <a class="sidebar-link" href="#">Menu Item 1</a>
+          <a class="sidebar-link" href="#">Our Resorts</a>
         </li>
+        <li class="sidebar-item">
+          <a class="sidebar-link" href="#">About Us</a>
+        </li>
+        <li class="sidebar-item">
+          <a class="sidebar-link" href="#">Tourist Destinations</a>
+        </li>
+        <li class="sidebar-item">
+          <a class="sidebar-link" href="#">Tribal Community</a>
+        </li>
+        <li class="sidebar-item">
+          <a class="sidebar-link" href="#">Gallery</a>
+        </li>
+        <li class="sidebar-item">
+          <a class="sidebar-link" href="#">Contact Us</a>
+        </li>
+        <li class="sidebar-item">
+          <a class="sidebar-link" href="#">cbet_maredumilli@yahoo.com</a>
+        </li>
+        <li class="sidebar-item">
+          <a class="sidebar-link" href="#">9494151617</a>
+        </li>
+        
+        <li class="sidebar-item">
+        <a class="sidebar-link" href="#">Sign In</a>
+      </li>
       </ul>
+      
     </div>
   </div>
   
