sidebar full width

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -32,7 +32,7 @@
       <!-- Sidebar content goes here -->
       <ul class="sidebar-menu list-unstyled">
         <li class="sidebar-item">
-          <a class="sidebar-link" href="#">Our Resorts</a>
+          <a class="sidebar-link" href="#">Resort Accommodation</a>
         </li>
         <li class="sidebar-item">
           <a class="sidebar-link" href="#">About Us</a>
