--- a/src/app/modules/layout/layout.component.scss
+++ b/src/app/modules/layout/layout.component.scss
@@ -1,17 +1,23 @@
 @use "/src/scss/base/" as *;
 
 nav{
-    height: 10vh;
+    // height: 10vh;
+    .navbar-brand{
+        width: max(15vw, 3rem);
+    }
 }
 #sidebar {
     position: fixed;
-    top: 10vh;
+    top: 10%;
     left: -100%;
     height: 90vh;
     width: 100%;
     background-color: #333;
     z-index: 1000;
     transition: left 0.3s ease;
+    @media(min-width:991px){
+        width: 20vw;
+    }
   
     &.active {
       left: 0;
@@ -27,7 +33,9 @@ nav{
       z-index: 999;
       display: none;
       &.active{
+       @media(min-width:991px) {
         display: block;
+       }
       }
     }
   
