--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -47,7 +47,7 @@
           <a class="sidebar-link" href="#">Gallery</a>
         </li>
         <li class="sidebar-item">
-          <a class="sidebar-link" href="#">Contact Us</a>
+          <a class="sidebar-link" href="#footer">Contact Us</a>
         </li>
         <li class="sidebar-item">
           <a class="sidebar-link d-lg-none" href="#">cbet_maredumilli@yahoo.com</a>
@@ -71,7 +71,7 @@
   <ng-content select=".main"></ng-content>
 </main>
 
-<footer class="bg-dark text-white py-4">
+<footer id="footer" class="bg-dark text-white py-4">
   <div class="container">
     <div class="row">
       <div class="col-md-4">
