--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-light py-0">
+  <nav class="navbar navbar-light py-0 fixed-top bg-light">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" (click)="toggleSidebar()">
         <span class="navbar-toggler-icon"></span>
