--- a/src/app/modules/layout/layout.component.scss
+++ b/src/app/modules/layout/layout.component.scss
@@ -8,9 +8,9 @@ nav{
 }
 #sidebar {
     position: fixed;
-    top: 10%;
+    top: 9%;
     left: -100%;
-    height: 90vh;
+    height: 91vh;
     width: 100%;
     background-color: #333;
     z-index: 1000;
@@ -25,7 +25,7 @@ nav{
   
     .overlay {
       position: fixed;
-      top: 10vh;
+      top: 0;
       left: 0;
       width: 100%;
       height: 100%;
