sidebar closing done -vignesh

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -28,6 +28,8 @@
   
   <div id="sidebar" [ngClass]="{ 'active': isSidebarOpen }">
     <div class="overlay" [ngClass]="{ 'active': isSidebarOpen }" ></div>
+    <div class="overlay" [ngClass]="{ 'active': isSidebarOpen }" (click)="closeSidebar()"></div>
+
     <div class="sidebar-content">
       <!-- Sidebar content goes here -->
       <ul class="sidebar-menu list-unstyled">
