--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,6 +1,14 @@
+
 <app-layout>
+
+  
+
   <div class="main">
     <section class="banner d-grid align-items-center">
+      <div>
+        <h1>Welcome, {{ currentUser }}!</h1>
+      </div>
+      
       <div class="banner-content">
         <h1 class="display-4 text-center text-white">
           Welcome to Vanavihari
