my acc menu, user acc dashboard

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -32,9 +32,9 @@
               <select class="form-select" id="resort">
                 <option value="Vanavihari">Vanavihari, Maredumilli</option>
                 <option value="JunglStar">Jungle Star, Valamuru</option>
-                <option value="Vanyavihari">
+                <!-- <option value="Vanyavihari">
                   Vanyavihari, Rampachodavaram
-                </option>
+                </option> -->
               </select>
             </div>
             <div class="col-md-3">
@@ -79,6 +79,36 @@
           </div>
         </form>
       </div>
+    </section>
+    <!-- section for resorts -->
+    <section class="resorts">
+      <div class="vanavihari container">
+        <h2 class="text-center">Vanavihari, Maredumilli</h2>
+        <div class="row">
+          <div class="col-md-3">
+            <img src="assets/img/vanavihari_logo.png" alt="vanavihari_logo">
+          </div>
+          <div class="col-md-9">
+            <p>
+              Vanavihari resort, nestled in Maredumilli, is a haven for
+              eco-tourism enthusiasts. This community-centric guesthouse offers a
+              peaceful escape surrounded by nature. Providing cozy cottages and
+              rooms, it sits within easy reach of Maredumilli Waterfalls, ensuring
+              guests enjoy a tranquil environment. Delight in breakfast and dinner
+              offerings, along with a relaxing stay at this charming retreat.
+            </p>
+          </div>
+        </div>
+        <!-- gallery and map -->
+        <div class="row">
+          <div class="col-md-7">
+            <!-- masonry gallery -->
+            
+          </div>
+        </div>
+
+      </div>
+
     </section>
     <div class="container mt-5">
       <div class="row">
