--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -20,6 +20,17 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/sign-in" routerLinkActive="active" ariaCurrentWhenActive="page">Sign In</a>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">My Account</a>
+          <div class="dropdown-menu position-absolute" aria-labelledby="dropdownId">
+            <!-- nav item dropdown My Account>Settings, My Bookings, Saved -->
+            <a class="dropdown-item" (click)="goToMyAccSettings()">Settings</a>
+            <a class="dropdown-item" (click)="goToMyBookings()">My Bookings</a>
+            <!-- <a class="dropdown-item" (click)="goToMyAccSettings">Saved</a> -->
+          </div>
+        </li>
+        
       </ul>
       <!-- <div class="collapse navbar-collapse justify-content-end">
       </div> -->
