navbar update, fontawesome

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -9,13 +9,15 @@
       </a>
       <ul class="navbar-nav d-none d-lg-flex flex-lg-row gap-3">
         <li class="nav-item">
-          <a class="nav-link" href="#">Resort Accommodation</a>
+          <a class="nav-link" href="#">Book Resort</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Email</a>
+          <a class="nav-link" href="mailto:info@vanavihari.com" title="click to send email">
+            <i class="fa-regular fa-envelope"></i>  info@vanavihari.com</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Phone</a>
+          <a class="nav-link" href="tel:+919494151617" title="call">
+            <i class="fa-solid fa-mobile-screen"></i> 9494151617</a>
         </li>
         <li class="nav-item" *ngIf="!isLoggedIn()">
           <a class="nav-link" routerLink="/sign-in" routerLinkActive="active" ariaCurrentWhenActive="page">Sign In</a>
@@ -46,7 +48,7 @@
       <!-- Sidebar content goes here -->
       <ul class="sidebar-menu list-unstyled">
         <li class="sidebar-item">
-          <a class="sidebar-link" href="#">Resort Accommodation</a>
+          <a class="sidebar-link d-lg-none" href="#">Book Resort</a>
         </li>
         <li class="sidebar-item">
           <a class="sidebar-link" href="#">About Us</a>
@@ -64,10 +66,13 @@
           <a class="sidebar-link" href="#footer">Contact Us</a>
         </li>
         <li class="sidebar-item">
-          <a class="sidebar-link d-lg-none" href="#">cbet_maredumilli@yahoo.com</a>
+          <a class="sidebar-link d-lg-none" href="mailto:info@vanavihari.com" title="click to send email">
+            <i class="fa-regular fa-envelope"></i>  info@vanavihari.com</a>
+
         </li>
         <li class="sidebar-item">
-          <a class="sidebar-link d-lg-none" href="#">9494151617</a>
+          <a class="sidebar-link d-lg-none" href="tel:+919494151617" title="call">
+            <i class="fa-solid fa-mobile-screen"></i> 9494151617</a>
         </li>
         
         <li class="sidebar-item">
@@ -105,8 +110,8 @@
         </address>
         <ul class="list-unstyled">
           <li> <i class="fa fa-phone" aria-hidden="true"></i>&nbsp;
-            <a class="text-decoration-none text-light" href="mailto:cbet_maredumilli@yahoo.com"
-              title="click to send email">cbet_maredumilli@yahoo.com</a>
+            <a class="text-decoration-none text-light" href="mailto:info@vanavihari.com"
+              title="click to send email">info@vanavihari.com</a>
           </li>
           <li>
             <!-- font awesome email -->
