my-bookings page -vignesh

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -30,7 +30,7 @@
             <a class="dropdown-item" (click)="goToMyAccSettings()">Settings</a>
             <a class="dropdown-item" (click)="goToMyBookings()">My Bookings</a>
             <!-- <a class="dropdown-item" (click)="goToMyAccSettings">Saved</a> -->
-            <a class="dropdown-item" (click)="logout()">Logout</a>
+            <a class="dropdown-item" (click)="logout()">Sign out</a>
           </div>
         </li>
         
