--- a/src/app/modules/my-bookings/my-bookings.component.html
+++ b/src/app/modules/my-bookings/my-bookings.component.html
@@ -1,34 +1,74 @@
 <app-layout>
-    <div class="main">
-        <section class="settings my-5 py-5">
-            <div class="container">
-                <h1 class="text-center mb-4">My Bookings</h1>
-
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card mb-4">
-                            <img src="https://via.placeholder.com/150.jpg" class="card-img-top" alt="Booking Image">
-                            <div class="card-body">
-                                <h5 class="card-title">Vanavihari</h5>
-                                <hr>
-                                <p class="card-text">address here</p>
-                                <hr>
-                                <p class="card-text">VanaVihari promotes sustainable and community-based eco-tourism,
-                                    fostering local
-                                    empowerment and environmental conservation.
-                                <p>
-                                <p class="card-text"> It aims to enhance living standards for indigenous communities
-                                    while providing
-                                    nature enthusiasts with an immersive and environmentally conscious experience.</p>
-                                <hr>
-                                <a href="#" class="btn btn-primary">View Property</a>
-                                <a href="#" class="btn btn-danger">Cancel</a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
+  <div class="main">
+    <section class="settings my-5 py-5">
+      <div class="container">
+        <h1 class="text-center mb-4">My Bookings</h1>
+        <!-- My Booking Card -->
+        <div class="container py-3">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card" style="width: 18rem">
+                <ul class="list-group list-group-flush">
+                  <img
+                    src="assets/img/vihari-room.jpg"
+                    class="card-img-top"
+                    alt="Booking Image"
+                  />
+                  <li class="list-group-item">
+                    <h5 class="card-title text-primary">
+                      Vanavihari Eco-tourism Complex
+                    </h5>
+                    <span class="rating">
+                      <i class="fa fa-star" style="color: yellow"></i>
+                      <i class="fa fa-star" style="color: yellow"></i>
+                      <i class="fa fa-star" style="color: yellow"></i>
+                      <i class="fa fa-star" style="color: yellow"></i>
+                      <i class="fa fa-star" style="color: yellow"></i>
+                    </span>
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <span class="card-text"
+                      >Maredumilli, Andhra Pradesh 533295</span
+                    >
+                  </li>
+                  <li class="list-group-item">
+                    <p class="card-text">
+                      Vanavihari promotes sustainable and community-based
+                      eco-tourism, fostering local empowerment and environmental
+                      conservation.
+                    </p>
+                  </li>
+                  <li
+                    class="list-group-item d-flex flex-row justify-content-start align-items-stretch"
+                  >
+                    <span
+                      class="badge bg-primary mb-0 me-1 d-flex align-items-center fs-5"
+                      >6.8</span
+                    >
+                    <span>
+                      <h6>Review score</h6>
+                      <p>8,218 reviews</p>
+                    </span>
+                  </li>
+                  <li
+                    class="list-group-item d-flex flex-row justify-content-end"
+                  >
+                    <span class="d-flex flex-column">
+                      <p class="card-text">Rate Per Day</p>
+                      <p class="card-text">&#8377;2000</p>
+                    </span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-around">
+                    <a href="#" class="btn btn-primary">View Property</a>
+                    <a href="#" class="btn btn-danger">Cancel</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </section>
-    </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
 </app-layout>
