carousel fade and zoom

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,7 +1,43 @@
 
 <app-layout>
   <div class="main">
-    <section class="banner d-grid align-items-center"> 
+    <div id="carouselExampleFade" class="carousel slide carousel-fade">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/img/OUTER-VIEW.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-overlay"></div>
+          <div class="carousel-caption p-0">
+            <h1 class="display-3">Welcome to Vanavihari</h1>
+            <p></p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/JungleStar-1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-overlay"></div>
+          <div class="carousel-caption p-0">
+            <h1 class="display-3">Welcome to Jungle Star</h1>
+            <p></p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/Vanavihari-1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-overlay"></div>
+          <div class="carousel-caption p-0">
+            <h1 class="display-3">Find yourself lost in deep silence</h1>
+            <p></p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- <section class="banner d-grid align-items-center"> 
       <div class="banner-content">
         <h1 class="display-4 text-center text-white">
           Welcome to Vanavihari
@@ -10,7 +46,7 @@
           A Community Based Eco-Tourism, Maredumilli
         </h3>
       </div>
-    </section>
+    </section> -->
     <section class="intro py-5">
       <div class="container">
         <p class="text-center border border-1 mb-0">
